# preload

./: .clang-format  .clang-format-ignore  .cz.toml  CHANGELOG.md  LICENSE  Makefile.am  Makefile.in  README.md  cmdline.c  common.h  conf.h  confkeys.in  gen.preload.conf.sh  log.h  meson.build  preload.8  preload.8.i  preload.c  preload.conf.in  preload.h  proc.c  proc.h  prophet.c  prophet.h  readahead.c  readahead.h  runtests.sh  spy.h  state.c  state.h
.github/workflows/: codeql.yml
include/: cmdline.h  common.h  conf.h  confkeys.h  log.h  preload.h  proc.h  prophet.h  readahead.h  state.h
man/: preload.8.i
src/: cmdline.c  conf.c  log.c  meson.build  preload.c  proc.c  prophet.c  readahead.c  spy.c  state.c
